--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 04:54:00 AM</p>
+    <p class="lastupdate">09/08/2020 04:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.6&#176;F</td>
+        <td class="data">67.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.6&#176;F</td>
+        <td class="data">67.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.6&#176;F</td>
+        <td class="data">67.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.1&#176;F</td>
+        <td class="data">46.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">46%</td>
+        <td class="data">47%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.600 inHg (-0.032)</td>
+        <td class="data">29.602 inHg (-0.029)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.4&#176;F</td>
+        <td class="data">79.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="04:53:55 AM">
-            67.6</span>
+          <span title="04:56:29 AM">
+            67.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:53:55 AM" class="loval">
-            67.6</span>
+          <span title="04:56:29 AM" class="loval">
+            67.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="04:40:43 AM">
-            46</span><br/>
+          <span title="04:54:23 AM">
+            47</span><br/>
           <span title="12:00:01 AM">
             30</span>
         </td>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="04:52:01 AM">
-            79.4</span>
+          <span title="04:56:01 AM">
+            79.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 14 hours, 7 minutes</td>
+      <td class="data">6 days, 14 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 14 hours, 7 minutes</td>
+      <td class="data">6 days, 14 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
