--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 04:59:00 AM</p>
+    <p class="lastupdate">09/08/2020 05:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.4&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.4&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.4&#176;F</td>
+        <td class="data">66.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.5&#176;F</td>
+        <td class="data">45.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.602 inHg (-0.029)</td>
+        <td class="data">29.604 inHg (-0.026)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.3&#176;F</td>
+        <td class="data">79.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="04:56:29 AM">
-            67.4</span>
+          <span title="05:03:51 AM">
+            66.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="07:04:11 AM (Sunday)">
-            67.4</span>
+          <span title="05:03:51 AM (Tuesday)">
+            66.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:56:29 AM" class="loval">
-            67.4</span>
+          <span title="05:03:51 AM" class="loval">
+            66.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="07:04:11 AM (Sunday)" class="loval">
-            67.4</span>
+          <span title="05:03:51 AM (Tuesday)" class="loval">
+            66.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -237,7 +237,7 @@
         <td class="data new_row hilo_day">
           <span title="12:35:35 AM">
             49.6</span><br/>
-          <span title="04:11:23 AM">
+          <span title="05:02:49 AM">
             44.8</span>
         </td>
         <td class="data new_row hilo_week">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          226
+          224
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="04:56:01 AM">
-            79.3</span>
+          <span title="05:02:01 AM">
+            79.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 14 hours, 12 minutes</td>
+      <td class="data">6 days, 14 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 14 hours, 12 minutes</td>
+      <td class="data">6 days, 14 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
