--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 05:09:00 AM</p>
+    <p class="lastupdate">09/08/2020 05:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">66.3&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">66.3&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">66.3&#176;F</td>
+        <td class="data">65.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.5&#176;F</td>
+        <td class="data">46.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">47%</td>
+        <td class="data">49%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.605 inHg (-0.023)</td>
+        <td class="data">29.610 inHg (-0.018)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.9&#176;F</td>
+        <td class="data">78.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="05:07:57 AM">
-            66.3</span>
+          <span title="05:13:03 AM">
+            65.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:07:57 AM (Tuesday)">
-            66.3</span>
+          <span title="05:13:03 AM (Tuesday)">
+            65.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:07:57 AM" class="loval">
-            66.3</span>
+          <span title="05:13:03 AM" class="loval">
+            65.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:07:57 AM (Tuesday)" class="loval">
-            66.3</span>
+          <span title="05:13:03 AM (Tuesday)" class="loval">
+            65.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:05:31 AM">
-            48</span><br/>
+          <span title="05:11:29 AM">
+            49</span><br/>
           <span title="12:00:01 AM">
             30</span>
         </td>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="05:07:01 AM">
-            78.9</span>
+          <span title="05:11:01 AM">
+            78.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 14 hours, 22 minutes</td>
+      <td class="data">6 days, 14 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 14 hours, 22 minutes</td>
+      <td class="data">6 days, 14 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
