--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 05:44:00 AM</p>
+    <p class="lastupdate">09/08/2020 05:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.1&#176;F</td>
+        <td class="data">64.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.1&#176;F</td>
+        <td class="data">64.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.1&#176;F</td>
+        <td class="data">64.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.0&#176;F</td>
+        <td class="data">46.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.608 inHg (-0.016)</td>
+        <td class="data">29.611 inHg (-0.009)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.9&#176;F</td>
+        <td class="data">77.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="05:42:07 AM">
-            65.1</span>
+          <span title="05:48:15 AM">
+            64.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:42:07 AM (Tuesday)">
-            65.1</span>
+          <span title="05:48:15 AM (Tuesday)">
+            64.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:42:07 AM" class="loval">
-            65.1</span>
+          <span title="05:48:15 AM" class="loval">
+            64.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:42:07 AM (Tuesday)" class="loval">
-            65.1</span>
+          <span title="05:48:15 AM (Tuesday)" class="loval">
+            64.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          219
+          217
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="05:41:01 AM">
-            77.9</span>
+          <span title="05:46:01 AM">
+            77.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 14 hours, 57 minutes</td>
+      <td class="data">6 days, 15 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 14 hours, 57 minutes</td>
+      <td class="data">6 days, 15 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
