--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/08/2020 06:34:00 AM</p>
+    <p class="lastupdate">09/08/2020 06:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">63.8&#176;F</td>
+        <td class="data">63.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">63.8&#176;F</td>
+        <td class="data">63.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">63.8&#176;F</td>
+        <td class="data">63.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.3&#176;F</td>
+        <td class="data">45.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">53%</td>
+        <td class="data">52%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.614 inHg (0.003)</td>
+        <td class="data">29.612 inHg (-0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">1 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.6&#176;F</td>
+        <td class="data">76.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             82.7</span><br/>
-          <span title="06:33:51 AM">
-            63.8</span>
+          <span title="06:38:29 AM">
+            63.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="06:33:51 AM (Tuesday)">
-            63.8</span>
+          <span title="06:38:29 AM (Tuesday)">
+            63.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:33:51 AM" class="loval">
-            63.8</span>
+          <span title="06:38:29 AM" class="loval">
+            63.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:33:51 AM (Tuesday)" class="loval">
-            63.8</span>
+          <span title="06:38:29 AM (Tuesday)" class="loval">
+            63.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:51:37 AM">
-            53</span><br/>
+          <span title="06:36:03 AM">
+            54</span><br/>
           <span title="12:00:01 AM">
             30</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          226
+          228
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.2</span><br/>
-          <span title="06:32:01 AM">
-            76.6</span>
+          <span title="06:35:01 AM">
+            76.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="06:32:01 AM (Tuesday)">
-            76.6</span>
+          <span title="06:35:01 AM (Tuesday)">
+            76.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">6 days, 15 hours, 47 minutes</td>
+      <td class="data">6 days, 15 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">6 days, 15 hours, 47 minutes</td>
+      <td class="data">6 days, 15 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
